Add '[c]ompress', '[k]wik compress' commands